
public enum AnimationLayers
{
    BaseAnimLayer = 0,
    AttackAnimLayer = 1
}

public enum UpdateMode
{
    Update = 0,
    FixedUpdate = 1
}

public enum AttackType
{
    None = 0,
    Melee = 1,
    Ranged = 2
}

public enum AttackState
{
    None = 0,
    LightAttack = 1,
    SlowAttack = 2,
    ThrowKnife = 3
}